--- a/about/index.html
+++ b/about/index.html
@@ -106,6 +106,7 @@ header-img: "img/about-bg.jpg"
 				<div class="cbp_tmicon cbp_tmicon-mail"></div>
 				<div class="cbp_tmlabel">
 					<a href="https://s.go28.cn/pay/" style="color:white;"><h2>爱心捐助</h2></a>
+					<span>支持支付宝、微信扫码哦</span>
 					<img src="https://go28.cn/api/qr/?text=https://s.go28.cn/pay/&size=200"  style="text-align:center;"></img>
 				</div>
 			</li>
