--- a/about/index.html
+++ b/about/index.html
@@ -34,14 +34,14 @@ header-img: "img/about-bg.jpg"
 				</div>
 			</li>
 			<li>
-				<time class="cbp_tmtime" ><span>2015.05</span></time>
+				<time class="cbp_tmtime" ><span>2017.09</span></time>
 				<div class="cbp_tmicon cbp_tmicon-phone"></div>
 				<div class="cbp_tmlabel">
-					<a href="http://tmall.com" style="color:white;"><h2>天猫实习生</h2></a>
-					<img src="./img/tmall.png"></img>
+					<a href="http://sunlands.com" style="color:white;"><h2>尚德机构</h2></a>
+					<img src="./img/sunlands.png"></img>
 					<ul>
-					<li>客户端开发工程师</li>
-					<li>参与几个模块的开发</li>
+					<li>bi</li>
+					<li>数据分析</li>
 					</ul>
 				</div>
 			</li>
