--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,7 @@ header-img: "img/about-bg.jpg"
 					<h2>个人介绍</h2>
 					<ul>
 					<li>娄永坤</li>
-					<li>喜欢<strong>Android， Web， Server</strong>等一些技术</li>
+					<li>喜欢<strong>Office， Web， Server</strong>等一些技术</li>
 					<li>可以通过<strong><a href="mailto:lyk@go28.cn" style="color:white;">lyk@go28.cn</a></strong>联系我哦</li>
 					</ul>
 				</div>
@@ -40,7 +40,7 @@ header-img: "img/about-bg.jpg"
 					<a href="http://sunlands.com" style="color:white;"><h2>尚德机构</h2></a>
 					<img src="./img/sunlands.png"></img>
 					<ul>
-					<li>bi</li>
+					<li>项目助理</li>
 					<li>数据分析</li>
 					</ul>
 				</div>
