--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,7 @@ header-img: "img/about-bg.jpg"
 		<ul class="cbp_tmtimeline">
 			<li>
 				<time class="cbp_tmtime" > <span>Who</span></time>
-				<div class="cbp_tmicon cbp_tmicon-user"></div>
+				<div class="cbp_tmicon cbp_tmicon-screen"></div>
 				<div class="cbp_tmlabel">
 					<h2>个人介绍</h2>
 					<ul>
@@ -35,7 +35,7 @@ header-img: "img/about-bg.jpg"
 			</li>
 			<li>
 				<time class="cbp_tmtime" ><span>2017.09</span></time>
-				<div class="cbp_tmicon cbp_tmicon-briefcase"></div>
+				<div class="cbp_tmicon cbp_tmicon-phone"></div>
 				<div class="cbp_tmlabel">
 					<a href="http://sunlands.com" style="color:white;"><h2>尚德机构</h2></a>
 					<img src="./img/sunlands.png"></img>
@@ -52,6 +52,19 @@ header-img: "img/about-bg.jpg"
 				<div class="cbp_tmlabel">
 			   	<a href="http://ustc.codeboy.me" style="color:white;"><h2>科大小秘书</h2></a>
 					<span>科大小秘书是一款为科大研究生设计的安卓软件。小秘书可以帮您跳过验证码的输入,方便实用。小秘书的功能有：查询成绩，查看个人课表，查询所有研究生选修课的时间地点老师，查询助研资金，查询epc预约课程信息等. </span>
+				</div>
+			</li>
+
+
+			<li>
+				<time class="cbp_tmtime" ><span>2013.09</span></time>
+				<div class="cbp_tmicon cbp_tmicon-earth"></div>
+				<div class="cbp_tmlabel">
+					<a href="http://www.ustc.edu.cn" style="color:white;"><h2>中国科学技术大学</h2></a>
+					<ul>
+					<li>计算机学院</li>
+					<li>安徽省合肥市金寨路96号</li>
+					</ul>
 				</div>
 			</li>
 
@@ -78,7 +91,7 @@ header-img: "img/about-bg.jpg"
 
 			<li>
 				<time class="cbp_tmtime" ><span>2012.09</span></time>
-				<div class="cbp_tmicon cbp_tmicon-graduation-hat"></div>
+				<div class="cbp_tmicon cbp_tmicon-earth"></div>
 				<div class="cbp_tmlabel">
 					<a href="http://www.bjczy.edu.cn/" style="color:white;"><h2>北京财贸职业学院</h2></a>
 					<ul>
@@ -90,7 +103,7 @@ header-img: "img/about-bg.jpg"
 
 			<li>
 				<time class="cbp_tmtime" > <span>Donate</span></time>
-				<div class="cbp_tmicon cbp_tmicon-heart"></div>
+				<div class="cbp_tmicon cbp_tmicon-mail"></div>
 				<div class="cbp_tmlabel">
 					<a href="https://s.go28.cn/pay/" style="color:white;"><h2>爱心捐助</h2></a>
 					<span>支持支付宝、微信扫码哦</span>
