--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,7 @@ header-img: "img/about-bg.jpg"
 					<h2>个人介绍</h2>
 					<ul>
 					<li>娄永坤</li>
-					<li>喜欢<strong>Office， Web， Server</strong>等一些技术</li>
+					<li>喜欢<strong>Office， Web， Windows</strong>等一些技术</li>
 					<li>可以通过<strong><a href="mailto:lyk@go28.cn" style="color:white;">lyk@go28.cn</a></strong>联系我哦</li>
 					</ul>
 				</div>
@@ -66,15 +66,6 @@ header-img: "img/about-bg.jpg"
 				</div>
 			</li>
 
-
-			<li>
-				<time class="cbp_tmtime" ><span>2012.05</span></time>
-				<div class="cbp_tmicon cbp_tmicon-phone"></div>
-				<div class="cbp_tmlabel">
-					<a href="http://zzu.codeboy.me" style="color:white;"><h2>短信邮箱</h2></a>
-					<span>短信邮箱是一款便捷的短信同步软件，它会将您发送和收到的短信发送至您的邮箱，您可以设置过滤器(号码或关键字)来取消同步含有这些特性的短信。  </span>
-				</div>
-			</li>
 
 
 			<li>
