--- a/apps.html
+++ b/apps.html
@@ -37,7 +37,7 @@ header-img: "img/post-bg-android.jpg"
 <div class="post-container cb-title-top">
 <div class="row">
     <div class="col-sm-2 hidden-xs element">
-        <img src="/img/message_to_mail.png"/>
+        <img src="/img/message_to_mail.png" style="width: 90px; height: 90px;"/>
     </div>
 
     <div class="col-sm-10 col-xs-12 element post-preview">
@@ -50,7 +50,7 @@ header-img: "img/post-bg-android.jpg"
 <hr>
 <div class="row">
     <div class="col-sm-2 hidden-xs element">
-        <img src="/img/zzu_client.png"/>
+        <img src="/img/zzu_client.png" style="width: 90px; height: 90px;"/ >
     </div>
 
     <div class="col-sm-10 col-xs-12 element  post-preview">
@@ -63,7 +63,7 @@ header-img: "img/post-bg-android.jpg"
 <hr>
 <div class="row">
     <div class="col-sm-2 hidden-xs element">
-        <img src="/img/ftp_server.png"/>
+        <img src="/img/ftp_server.png" style="width: 90px; height: 90px;"/>
     </div>
 
     <div class="col-sm-10 col-xs-12 element post-preview">
@@ -78,7 +78,7 @@ header-img: "img/post-bg-android.jpg"
 
 <div class="row">
     <div class="col-sm-2 hidden-xs element">
-        <img src="/img/ustc_client.png"/>
+        <img src="/img/ustc_client.png" style="width: 90px; height: 90px;"/>
     </div>
 
     <div class="col-sm-10 col-xs-12 element post-preview">
