--- a/apps.html
+++ b/apps.html
@@ -66,7 +66,7 @@ header-img: "img/post-bg-android.jpg"
 
 <div class="row">
     <div class="col-sm-2 hidden-xs element">
-        <img src="/img/ftp_server.png" style="width: 96px; height: 96px;"/>
+        <img src="/img/mailtime.png" style="width: 96px; height: 96px;"/>
     </div>
 
     <div class="col-sm-10 col-xs-12 element post-preview">
