--- a/about/index.html
+++ b/about/index.html
@@ -47,25 +47,28 @@ header-img: "img/about-bg.jpg"
 			</li>
 
 			<li>
-				<time class="cbp_tmtime" ><span>2014.02</span></time>
+				<time class="cbp_tmtime" ><span>2015.02</span></time>
 				<div class="cbp_tmicon cbp_tmicon-phone"></div>
 				<div class="cbp_tmlabel">
-			   	<a href="http://ustc.codeboy.me" style="color:white;"><h2>科大小秘书</h2></a>
-					<span>科大小秘书是一款为科大研究生设计的安卓软件。小秘书可以帮您跳过验证码的输入,方便实用。小秘书的功能有：查询成绩，查看个人课表，查询所有研究生选修课的时间地点老师，查询助研资金，查询epc预约课程信息等. </span>
+			   	<a href="https://www.qichacha.com/product_29c81423-2470-41f4-9e2a-132124fe8ed3" style="color:white;"><h2>英特华集团</h2></a>
+					<ul>
+					<li>天猫图书</li>
+					<li>电商运营</li>
+					</ul>
 				</div>
 			</li>
 
 
-
+<!--
 			<li>
-				<time class="cbp_tmtime" ><span>2012.10</span></time>
+				<time class="cbp_tmtime" ><span>2013.10</span></time>
 				<div class="cbp_tmicon cbp_tmicon-phone"></div>
 				<div class="cbp_tmlabel">
-					<a href="http://zzu.codeboy.me" style="color:white;"><h2>郑大小秘书</h2></a>
-					<span>郑大小秘书是一款专门为郑大学子设计的安卓软件。您通过它可以查询个人教务信息，新闻招聘信息，图书馆馆藏书目;可以方便的登陆ZzuWlan,可以和同学相互发送私信，对自己感兴趣的内容加以收藏等。 </span>
+					<a href="https://jian.xin/" style="color:white;"><h2>简信</h2></a>
+					<span>简信是一款极简的邮件聊天应用，把烦人的邮件从此变得像短信一样简单。简信将复杂的电子邮件格式重组，变为聊天气泡，并且把聊天和其他非通讯类的邮件智能地分类。 </span>
 				</div>
 			</li>
-
+-->
 
 
 			<li>
